--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,10 +11,11 @@
     <link media="all" rel="stylesheet" href="dist/app.css">
     <title>MindK Front Assessment</title>
 </head>
-<body class="body">
+<body class="body" id="body">
 
 <div class="wrapper">
     <header class="main-header">
+        <div class="overlay"></div>
         <div class="container">
             <div class="main-header__wrapper">
                 <div class="main-header__branding">
@@ -24,12 +25,16 @@
                     </a>
                 </div>
                 <nav class="main-header__navigation main-navigation">
+                    <div class="main-navigation__controls">
+                        <div class="main-navigation__burger"></div>
+                    </div>
                     <ul class="main-navigation__list">
                         <li class="main-navigation__item">
                             <a href="#" class="main-navigation__item-link">About us</a>
                         </li>
                         <li class="main-navigation__item main-navigation__item_has-children">
                             <a href="#" class="main-navigation__item-link">Membership</a>
+                            <span class="sub-menu-indicator"></span>
                             <ul class="main-navigation__sub-menu">
                                 <li class="main-navigation__item">
                                     <a href="#" class="main-navigation__item-link">About us</a>
@@ -59,7 +64,7 @@
             </div>
         </div>
     </header>
-    <div class="main-content">
+    <main class="main-content">
         <section class="hero-slider">
             <div class="container">
                 <div class="hero-slider__content">
@@ -79,7 +84,7 @@
                     </div>
                     <div class="article__content">
                         <h4 class="article__subtitle">Know who lives at your home with</h4>
-                        <h3 class="article__title">Tenant screening service</h3>
+                        <h2 class="article__title">Tenant screening service</h2>
                         <p class="article__description">
                             Tenant Screening is a service that allows you to Lorem usce
                             volutpat lectus justo, ut suscipit felis congue ut. Vivamus ut ultricies ante dictum.
@@ -95,7 +100,7 @@
                     </div>
                     <div class="article__content">
                         <h4 class="article__subtitle">Make your business grow with</h4>
-                        <h3 class="article__title">Advertising </h3>
+                        <h2 class="article__title">Advertising </h2>
                         <p class="article__description">
                             TWide selection of advertising oportunities like Lorem usce volutpat lectus justo, ut
                             suscipit felis congue ut. Vivamus ut ultricies ante dictum.
@@ -111,7 +116,7 @@
                     </div>
                     <div class="article__content">
                         <h4 class="article__subtitle">Know who lives at your home with</h4>
-                        <h3 class="article__title">Tenant screening service</h3>
+                        <h2 class="article__title">Tenant screening service</h2>
                         <p class="article__description">
                             Tenant Screening is a service that allows you to Lorem usce
                             volutpat lectus justo, ut suscipit felis congue ut. Vivamus ut ultricies ante dictum.
@@ -230,7 +235,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </main>
     <footer class="main-footer">
         <div class="container">
             <p class="main-footer__copy">Copyright © 2020 Apartment Owners Association. All Rights Reserved. </p>
@@ -239,6 +244,7 @@
             </p>
         </div>
     </footer>
+
 </div>
 
 <script src="dist/app.js"></script>
